when hover on heading there are small gap in middle of heading, I solve it

--- a/CSS/master.css
+++ b/CSS/master.css
@@ -120,7 +120,7 @@ a{
         left:0;
         border-radius: 0;
         height: 100%;
-        width: 50%;
+        width: 51%;
     }   
 }
 @keyframes move-to-left{
@@ -137,7 +137,7 @@ a{
         right:0;
         border-radius: 0;
         height: 100%;
-        width: 50%;
+        width: 51%;
     }   
 }
 /* End styling for main heading component  */
